# blockchain-A2

./: .gitignore  CMakeLists.txt  main.cpp  ui.cpp  ui.h
src/distributed_ledger/: block.cpp  block.h  inventory.cpp  inventory.h  ledger.cpp  ledger.h  transaction.cpp  transaction.h
src/dsa/: dsa_key_generation.cpp  dsa_key_generation.h  dsa_main.h  dsa_signing.cpp  dsa_signing.h  dsa_verification.cpp
src/hash/: hash.cpp  hash.h
src/proof_of_authority/: poa.cpp  poa.h
src/version_1/dsa/: dsa_key_generation.cpp  dsa_key_generation.h  dsa_main.cpp  dsa_main.h  dsa_signing.cpp  dsa_signing.h  dsa_verification.cpp  dsa_verification.h
src/version_1/dsi/: digital_signature.cpp  digital_signature.h  dsa_key_generation.cpp  dsa_key_generation.h
src/version_1/proof_of_authority/: poa.cpp  poa.h
